2006-10-14  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputSGML): Allow the section id to be set from
	within the source code "SECTION:" comment block. (#349855)

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* style.css: added missing comma from previous fix (#360967).

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputSymbolTraits): new function to output the
	"Since" and "Stability Level:" paragraphs, with roles to allow
	XSLT styling. (#348046)

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: support interfaces on non-GObject types.
	(#348058, Josh Parsons).

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: make sure interfaces are initialized so the
	signals query works. (#355352)

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* style.css: Make sure appendix title isn't obscured by navigation bar
	(#360967, Philip Kovacs).

2006-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-scangobj.in (get_type_name): Don't set is_pointer 
	to TRUE for enum and flags types.  (#354880, Yevgen Muntyan)

2006-07-29  Damon Chaplin  <damon@gnome.org>

	* Released 1.7.

2006-06-30  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ScanSourceFile): fix regexp to allow section names
	with '-' in them.

	* gtk-doc.make (all-local, docs): added separate 'docs' target that can
	be used even when the '--disable-gtk-doc' configure option is used.

2006-06-15  Jody Goldberg <jody@gnome.org>

	* gtkdoc-mkdb.in (OutputFunction) : finish off #341872
	  Support 'T const * const *foo' and other more complex types.
	  Support ptr2ptr2func as a func argument.
	    'void foo (void (**func) (void))'
	* gtkdoc-mktmpl.in : ditto.

	  (committed by Damon with minor changes to spacing so GTK+ docs are
	   unchanged).

2006-06-09  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: 
	* gtk-doc.xsl: use the 'role' attribute rather than the 'id' attribute